# lists

./: .gitignore  CMakeLists.txt  Makefile  README.md
inc/: list.h
src/: main.c
src/list/: list.c
